# capa-8d-expert

./: .gitignore  LESSONS_LEARNED_CAPA_8D_EXPERT.md  PRODUCTION_ARCHITECTURE.md  README.md  gemini.md  pyproject.toml
evaluation/: eval.py  tests_v3.jsonl
knowledge-base/markdown/: README.md
scripts/: answer.py  answer_original.py  app.py  ingest.py
scripts/diagnostics/: sc_viz.py  tsne_viz.py
